# JointDev

./: .gitignore
20240219/0/: Notglob.py  dumper.py  final.py  new.py  nglob.py  super_dumper.py
20240219/1/: prog.py
20240226/0/: Pipfile  cow_file.py  cow_print.py
20240226/1/: prog.py
20240226/2/: prog.py
20240304/0/: prog.py  prog2.py
20240304/1/: prog.py
20240311/0/: cal.py  prog.py
20240311/1/: prog.py
20240318/0/: 0001-Fix.patch  12.patch  23.patch  cal1  cal2  cal2.orig  calnew.patch  cli.py  file1  srv.py
20240318/1/: client.py  server.py
20240325/0/: cli.py  httpsrv.py
20240325/1/: client.py  server.py
20240401/0/: .flake8  .pydocstyle  ligstr.py
20240401/1/: client.py
20240513/0/UsamMMUD/: MANIFEST.in  dodo.py  pyproject.toml
20240513/0/UsamMMUD/mood.egg-info/: PKG-INFO  SOURCES.txt
20240513/0/UsamMMUD/mood/client/: __init__.py
20240513/0/UsamMMUD/mood/common/: __init__.py
20240513/0/UsamMMUD/mood/server/: __main__.py
20240513/0/UsamMMUD/server/: .flake8
20240513/0/mood/: MANIFEST.in  dodo.py  pyproject.toml
20240513/0/mood/po/ru_RU.UTF-8/LC_MESSAGES/: MMUD_Locale.po
20240513/0/mood/server/: __init__.py
20240513/1/: MANIFEST.in  dodo.py  pyproject.toml  scenario1.mood  scenario2.mood  test_client.py  test_client_server.py  test_mocker_addmon.mood  test_mocker_attack.mood
20240513/1/Documentation/: Makefile  make.bat
20240513/1/Documentation/docs/: server_documentation.rst
20240513/1/UsamMMUD/: MANIFEST.in  dodo.py  test_client_server.py
20240513/1/UsamMMUD/Documentation/docs/: conf.py
20240513/1/UsamMMUD/mood.egg-info/: SOURCES.txt
20240513/1/UsamMMUD/mood/client/: __init__.py
20240513/1/UsamMMUD/mood/common/: __init__.py
20240513/1/UsamMMUD/mood/server/: __init__.py
20240513/1/UsamMMUD/po/ru_RU.UTF-8/LC_MESSAGES/: MMUD_Locale.po
20240513/1/mood.egg-info/: PKG-INFO  SOURCES.txt
20240513/1/mood/client/: .flake8  __init__.py  __main__.py
20240513/1/mood/common/: __init__.py
20240513/1/mood/po/ru_RU.UTF-8/LC_MESSAGES/: MMUD_Locale.po
20240513/1/mood/server/: __init__.py
20240513/1/po/ru_RU.UTF-8/LC_MESSAGES/: MMUD_Locale.po
(+83 files in other folders)
