[project]
name = "mood"
description = "MMUD terminal game"
version = "0.0.1"
dependencies = ["python-cowsay"]

[build-system]
requires = ["Sphinx", "build", "doit", "python-cowsay", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
mood = "mood"

[tool.setuptools.package-data]
mood = ["mood/po/*/*/*.mo", "mood/_build/*"]

[project.scripts]
client = "mood.client.__main__:client"
server = "mood.server.__main__:start"

