[project]
name = "mood"
description = "MMUD terminal game"
dynamic = ["version"]

[build-system]
requires = ["Sphinx", "build", "doit", "python-cowsay", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "mood.VERSION"}

[tool.setuptools.package-dir]
mood = ""

[tool.setuptools.package-data]
mood = ["po/*/*/*.mo"]